--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-phone-input-2",
-  "version": "2.6.1",
-  "description": "A react component to format phone numbers",
+  "name": "react-phone-input-2-mui",
+  "version": "2.6.3",
+  "description": "A react component to format phone numbers - with Material UI",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bl00mber/react-phone-input-2"
+    "url": "https://github.com/cezarderevlean/react-phone-input-2-mui"
   },
   "keywords": [
     "react",
@@ -20,9 +20,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bl00mber/react-phone-input-2/issues"
+    "url": "https://github.com/cezarderevlean/react-phone-input-2-mui/issues"
   },
-  "homepage": "https://github.com/bl00mber/react-phone-input-2",
+  "homepage": "https://github.com/cezarderevlean/react-phone-input-2-mui",
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
@@ -38,12 +38,18 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.13.0"
+    "webpack-merge": "^0.13.0",
+    "@material-ui/core": "^3.3.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.1"
+  },
+  "peerDependencies": {
+    "@material-ui/core": "^3.3.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
