--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/cezarderevlean/react-phone-input-2-mui",
   "devDependencies": {
     "@babel/core": "^7.3.3",
-    "@material-ui/core": "^3.9.3",
+    "@mui/material": "^5.0.2",
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react-app": "^7.0.1",
@@ -52,8 +52,8 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-hot-loader": "^4.6.5",
     "react-testing-library": "^6.0.4",
     "style-loader": "^0.23.1",
@@ -65,6 +65,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "lodash.memoize": "^4.1.2",
@@ -72,7 +74,7 @@
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "@material-ui/core": "^3.3.2",
+    "@mui/material": "^5.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
